create documentatio to endpoint create user
