# module07/internal/dto/dto.go
@@ -7,7 +7,7 @@ type CreateProductInput struct {
 type CreateUserInput struct {
 	Name     string `json:"name"`
 	Email    string `json:"email"`
-	Password string `json:"Password"`
+	Password string `json:"password"`
 }
 
 type GetJWTIput struct {
