# module07/internal/infra/webserver/handlers/user_handler.go
@@ -11,6 +11,10 @@ import (
 	"goexpert.com/module07/internal/infra/database"
 )
 
+type Error struct {
+	Message string `json:"message"`
+}
+
 type userHandler struct {
 	UserDB database.UserInterface
 }
@@ -54,11 +58,16 @@ func (h *userHandler) GetJwt(w http.ResponseWriter, r *http.Request) {
 
 }
 
-//Create user godoc
-//@Summary create user
-//@Description create user
-//@Tags users
-@Acept
+// Create user godoc
+// @Summary Create user
+// @Description Create user
+// @Tags users
+// @Accept json
+// @Produce json
+// @Param request body 	dto.CreateUserInput true "user request"
+// @Success 201
+// @Failure 500 {object} Error
+// @Router /users [post]
 func (h *userHandler) Create(w http.ResponseWriter, r *http.Request) {
 	var user dto.CreateUserInput
 	err := json.NewDecoder(r.Body).Decode(&user)
@@ -69,11 +78,15 @@ func (h *userHandler) Create(w http.ResponseWriter, r *http.Request) {
 	u, err := entity.NewUser(user.Name, user.Email, user.Password)
 	if err != nil {
 		w.WriteHeader(http.StatusBadRequest)
+		error := Error{Message: err.Error()}
+		json.NewEncoder(w).Encode(error)
 		return
 	}
 	err = h.UserDB.Create(u)
 	if err != nil {
 		w.WriteHeader(http.StatusInternalServerError)
+		error := Error{Message: err.Error()}
+		json.NewEncoder(w).Encode(error)
 		return
 	}
 	w.WriteHeader(http.StatusOK)
